# geowrangler

./: .coveragerc  .firebaserc  .flake8  .gitignore  .gitleaksignore  .isort.cfg  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPMENT.md  LICENSE  Makefile  README.md  RELEASE.md  area_zonal_stats.html  catalog-info.yaml  datasets_geofabrik.html  datasets_nightlights.html  datasets_ookla.html  datasets_utils.html  dhs.html  distance_zonal_stats.html  docker-compose.yml  firebase.json  grids.html  index.html  notes-install-poetry-with-nbdev-project.md  noxfile.py  overview.poverty_mapping_demo.html  overview.usecase_ookla.html  polygon_fill.html  pyproject.toml  raster_process.html  raster_to_dataframe.html  raster_zonal_stats.html  readme.html  robots.txt  search.json  settings.ini  (+19 more)
.github/workflows/: deploy-pages-on-merge.yml  deploy.yaml  firebase-hosting-merge.yml  firebase-hosting-pull-request.yml  pre-commit.yaml  pytest.yaml
data/: broken.geojson  kh.DTA  mm.DTA  ph.DTA  ph_gps.dbf  ph_gps.shp  ph_gps.shx  ph_pois.geojson  ph_s5p_AER_AI_340_380.tiff  phl_adm0.geojson  phl_dhs_cluster_level.csv  region34ncr_osm_pois.geojson  region34ncr_population_land.geojson  region3_admin_grids.geojson  region3_admin_tile_clusters.geojson  region3_bingtile_grid13.geojson  region3_osm_pois.geojson  region3_population_pois.geojson  sample_terrain.tif  simple_aoi.geojson  simple_planar_aoi.geojson  simple_planar_data.geojson  tl.DTA
data/raster_to_df_sample/: cabanglasan_mask.tiff
data/vector_to_raster_mask_sample/: labels_20220816.gpkg
docs/: CNAME  Gemfile  Sample.html  Samples.html  _config.yml  core.html  grids.html  index.html  sidebar.json
docs/_data/: topnav.yml
geowrangler/: _modidx.py  _nbdev.py  area_zonal_stats.py  core.py  data_download.py  dhs.py  distance_zonal_stats.py  grids.py  quadkey.py  raster_process.py  raster_to_dataframe.py  raster_zonal_stats.py  spatialjoin_highest_intersection.py  test_module.py  tile_clustering.py  tile_generator.py  validation.py  vector_to_raster_mask.py  vector_zonal_stats.py
geowrangler/datasets/: geofabrik.py  nightlights.py  ookla.py  utils.py
geowrangler/gridding_utils/: polygon_fill.py
mkdocs/: mkdocs.yaml
notebooks/: 00_grids.ipynb  00_validation.ipynb  01_validation.ipynb  02_vector_zonal_stats.ipynb  03_raster_zonal_stats.ipynb  04_area_zonal_stats.ipynb  04_dhs.ipynb  04_dhs_data.ipynb  05_data_download.ipynb  05_datasets_geofabrik.ipynb  05_datasets_ookla.ipynb  05_distance_zonal_stats.ipynb  06_area_zonal_stats.ipynb  07_distance_zonal_stats.ipynb  08_distance_zonal_stats copy.ipynb  08_raster_to_dataframe.ipynb  08_tile_clustering.ipynb  08_vector_to_raster_mask.ipynb  09_raster_process.ipynb  10_vector_to_raster_mask.ipynb  11_raster_to_dataframe.ipynb  12_spatialjoin_highest_intersection.ipynb  13_datasets_utils.ipynb  14_datasets_nightlights.ipynb  15_polygon_fill.ipynb  Sample.ipynb  Samples.ipynb  _quarto.yml  index.ipynb  nbdev.yml  overview.poverty_mapping_demo.ipynb  overview.usecase_ookla.ipynb  raster_utils.ipynb  readme.ipynb  sidebar.yml  tutorial.area_zonal_stats.ipynb  tutorial.data_download.ipynb  tutorial.datasets.ipynb  tutorial.dhs.ipynb  tutorial.distance_zonal_stats.ipynb  (+9 more)
scripts/: publish2pypi.sh
tests/: test_area_zonal_stats.py  test_data_download.py  test_datasets_geofabrik.py  test_datasets_nightlights.py  test_datasets_ookla.py  test_dhs.py  test_distance_zonal_stats.py  test_grids.py  test_polygon_fill.py  test_raster_process.py  test_raster_zonal_stats.py  test_sample.py  test_tile_clustering.py  test_utils.py  test_validation.py  test_vector_zonal_stats.py
(+2 files in other folders)
