[tool.poetry]
name = "geowrangler"
version = "0.1.0"
description = "Tools for dealing with geospatial data"
authors = ["Thinking Machines <geowrangler@thinkingmachin.es>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/thinkingmachines/geowrangler"
repository = "https://github.com/thinkingmachines/geowrangler"
keywords = ["geospatial", "tools"]
include = ["LICENSE"]

[tool.poetry.dependencies]
python = "^3.7.1,<4.0"
numpy = "^1.21,<2"
pandas = "^1.2,<2"
geopandas = "^0.10"
fastcore = "^1.4,<2"
pygeos = "^0.12.0"
h3 = "^3.7.4"
morecantile = "^3.1.2"
rasterstats = "^0.17.0"
scikit-learn = "^1.0.0"
requests = "^2.28.1"
[tool.poetry.dev-dependencies]
nbdev = {git = "https://github.com/butchland/nbdev.git", rev = "add-black-format"}
pytest = "^7.1.2"
black = "^22.3.0"
flake8 = "^4.0.1"
isort = "^5.10.1"
jupyterlab = "^3.4.2"
pytest-cov = "^3.0.0"
pytest-xdist = "^2.5.0"
jupyterlab-vim = "^0.15.1"
watchdog = "^2.1.8"
matplotlib = "^3.5.2"
pytest-mock = "^3.7.0"
build = "^0.8.0"
twine = "^4.0.1"

[tool.poetry.group.dev.dependencies]
pyarrow = "^9.0.0"
fastparquet = "^0.7.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
